# edn

./: .gitignore  Cargo.toml  README.md
benches/: cmp.rs  dump.rs  parse.rs
data/: all.edn  block.edn
src/: error.rs  lib.rs  macros.rs  main.rs  map.rs  parser.rs  symbol.rs
src/grammars/: edn.pest
src/value/: from.rs  mod.rs  ser.rs
