[package]
name = "edn"
version = "0.1.0"
edition = "2021"
description = "A Rust library for parsing and generating EDN data"
authors = ["Andelf <andelf@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/andelf/edn"
readme = "README.md"
keywords = ["edn", "parser", "generator"]
categories = ["parsing", "serialization"]
documentation = "https://docs.rs/edn"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "dump"
harness = false

[[bench]]
name = "cmp"
harness = false

[dependencies]
pest = "2.5.1"
pest_derive = "2.5.1"
chrono = "0.4.23"
uuid = "1.2.2"
ordered-float = "3.4.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
criterion = "0.4"

[features]
default = []
tagged-elements = []
